[project]
name = "timeseries-prototype"
version = "0.1.0"
description = "Interactive timeseries association prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "duckdb>=0.10.3",
    "loguru>=0.7.0",
]

[project.scripts]
timeseries-serve        = "backend.main:main"
timeseries-build-db     = "backend.build_db:main"
timeseries-build-search = "backend.build_search:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
